JupyterNotebook through VSCode

--- a/Divvy_Jupyter.ipynb
+++ b/Divvy_Jupyter.ipynb
@@ -686,7 +686,7 @@
     "\n",
     "# Customize\n",
     "plt.title('What the data tell us: Ride Hours/Week')\n",
-    "plt.xlabel('Day of Week')\n",
+    "plt.xlabel('Hours of day')\n",
     "plt.ylabel('Average hours/day of week')\n",
     "\n",
     "# Show plot\n",
